# garble_blarf

./: .dev  .gitattributes  .gitignore  .python-version  COMPARATOR_WORKFLOW.md  README.md  dev_README.md  dev_workflow.md  memo_data.py  old_packages.txt  pyproject.toml  pyrightconfig.json  schema.txt  test_memo_transcriptions.db  test_schema.er  voicereader.py
src/memo_transcriber/: __init__.py  cli.py  cli_output.py  comparator.py  comparison.py  database.py  dev_commands.py  faster_whisper_transcriber.py  memo_data.py  memo_organiser.py  model_config.py  printer.py  transcriber.py  voice_memos_printer.py  voicememo_db.py  whisper_transcriber.py
src/memo_transcriber/dev_tools/: __init__.py  dev_commands.py
